# devcontainer-ansible

./: .gitignore  CKA-30-Day-Tutorial.md  KUBERNETES.md  README.md  pyproject.toml  zshenv  zshrc
.devcontainer/: Dockerfile  devcontainer.json
ansible-home/: ansible.cfg
ansible-home/inventory/: inventory.ini
ansible-home/playbooks/: configure-datadog-proxmox-advanced.yml  configure-datadog-proxmox-monitoring.yml  configure-proxmox-checks.yml  install-datadog-agent.yml  install-datadog-proxmox.yml  install-docker.yml  install-k8s-prerequisites.yml  setup-k8s-cluster.yml  setup-proxmox-monitoring.yml  site.yml  system-update.yml
ansible-home/playbooks/docker/: deploy-docker-compose-cli.yml  deploy-docker-compose.yml
ansible-home/playbooks/docker/files/: docker-compose-ollama.yml
ansible-home/playbooks/docs/: DOCKER-COMPOSE-DEPLOY.md  KUBERNETES.md
ansible-home/playbooks/kubernetes/: get-kubeconfig.yml  install-k8s-cluster.yml  install-k8s-prerequisites.yml  setup-k8s-cluster.yml
ansible-home/playbooks/system/: configure-journald.yml  reboot-nodes.yml
ansible-home/templates/: datadog-agent.yaml.j2  datadog-proxmox-api-metrics.sh.j2  datadog-proxmox.yaml.j2
